--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "nc"
   ],
   "name": "@neogrup/nc-zone-map",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "resolutions": {
     "inherits": "2.0.3",
     "samsam": "1.1.3",
@@ -16,23 +16,24 @@
   "main": "nc-zone-map.js",
   "author": "edgar.piera@neogrup.com",
   "dependencies": {
-    "@polymer/polymer": "^3.0.0",
+    "@polymer/app-localize-behavior": "^3.0.0",
     "@polymer/iron-ajax": "^3.0.0",
+    "@polymer/iron-icons": "^3.0.0",
     "@polymer/neon-animation": "^3.0.0",
+    "@polymer/paper-button": "^3.0.0",
+    "@polymer/paper-card": "^3.0.0",
     "@polymer/paper-dialog": "^3.0.0",
     "@polymer/paper-dialog-scrollable": "^3.0.0",
-    "@polymer/iron-icons": "^3.0.0",
-    "@polymer/paper-button": "^3.0.0",
     "@polymer/paper-icon-button": "^3.0.0",
-    "@polymer/app-localize-behavior": "^3.0.0",
+    "@polymer/polymer": "^3.2.0",
     "accounting-js": "^1.1.1",
     "moment": "^2.24.0",
     "web-animations-js": "^2.3.1"
   },
   "devDependencies": {
-    "@polymer/iron-demo-helpers": "^3.0.0",
+    "@polymer/iron-demo-helpers": "^3.1.0",
     "@polymer/test-fixture": "^4.0.2",
-    "@webcomponents/webcomponentsjs": "^2.0.0",
+    "@webcomponents/webcomponentsjs": "^2.2.10",
     "chai": "^4.2.0",
     "mocha": "^5.2.0",
     "wct-mocha": "^1.0.0"
