--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "nc"
   ],
   "name": "@neogrup/nc-zone-map",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "resolutions": {
     "inherits": "2.0.3",
     "samsam": "1.1.3",
@@ -25,6 +25,8 @@
     "@polymer/paper-dialog": "^3.0.0",
     "@polymer/paper-dialog-scrollable": "^3.0.0",
     "@polymer/paper-icon-button": "^3.0.0",
+    "@polymer/paper-input": "^3.0.2",
+    "@polymer/iron-a11y-keys": "^3.0.0",
     "@polymer/polymer": "^3.2.0",
     "accounting-js": "^1.1.1",
     "moment": "^2.24.0",
